Refactor role and profile handling operations.
Updated `fetchSubRoles` to return a mapping of roles with sub-roles for improved structure. Added SQL migration script for role corrections and sub-role associations. Enhanced service logic to accommodate grouped sub-roles and optimized profile role arrangements.